# Hermes

./: .gitignore  CMakeLists.txt  README.md  clear_build.sh
client/: CMakeLists.txt  test_client.cpp
hermesnet/: CMakeLists.txt
hermesnet/hermes/buffers/: exchange_buffer.cpp  exchange_buffer.h  ring_buffer.cpp  ring_buffer.h
hermesnet/hermes/common/: common.h  duration_bench.h  error_strings.h  memory.h  structures.h  types.h  utils.h
hermesnet/hermes/data_receiver/: client_data_receiver.cpp  client_data_receiver.h  receiver.cpp  receiver.h  server_data_receiver.cpp  server_data_receiver.h
hermesnet/hermes/data_receiver/interface/: ireceiver.h
hermesnet/hermes/data_sender/: client_data_sender.cpp  client_data_sender.h  sender.cpp  sender.h  server_data_sender.cpp  server_data_sender.h
hermesnet/hermes/data_sender/interface/: isender.h
hermesnet/hermes/log/: log.cpp  log.h  modules.h
hermesnet/hermes/loop/: mainloop.cpp  mainloop.h
hermesnet/hermes/message/: body.h  datagram.h  header.h  helper.h  message.hpp  message_block.h  message_body.h  message_generator.cpp  message_generator.h  message_header.h  message_id.h  record.h  service_type_id.h
hermesnet/hermes/message/objects/: accept_connect.h  connect.h  decline_connect.h  disconnect.h  ping.h
hermesnet/hermes/netloop/: netloop.cpp  netloop.h
hermesnet/hermes/service/client/: client.cpp  client.h
hermesnet/hermes/service/helper/: socket_helper.h
hermesnet/hermes/service/server/: server.cpp  server.h
libs/boost/include/boost/: throw_exception.hpp
libs/boost/lib/cmake/boost_container-1.77.0/: boost_container-config.cmake
libs/boost/lib/cmake/boost_context-1.77.0/: boost_context-config.cmake
libs/boost/lib/cmake/boost_coroutine-1.77.0/: boost_coroutine-config.cmake
libs/boost/lib/cmake/boost_date_time-1.77.0/: boost_date_time-config.cmake
libs/boost/lib/cmake/boost_fiber_numa-1.77.0/: boost_fiber_numa-config.cmake
libs/boost/lib/cmake/boost_graph-1.77.0/: boost_graph-config.cmake  libboost_graph-variant-static.cmake
libs/boost/lib/cmake/boost_iostreams-1.77.0/: libboost_iostreams-variant-static.cmake
libs/boost/lib/cmake/boost_log-1.77.0/: libboost_log-variant-static.cmake
libs/boost/lib/cmake/boost_log_setup-1.77.0/: libboost_log_setup-variant-static.cmake
libs/boost/lib/cmake/boost_math_c99f-1.77.0/: boost_math_c99f-config.cmake
libs/boost/lib/cmake/boost_math_c99l-1.77.0/: boost_math_c99l-config.cmake
libs/boost/lib/cmake/boost_math_tr1-1.77.0/: boost_math_tr1-config.cmake
libs/boost/lib/cmake/boost_math_tr1f-1.77.0/: boost_math_tr1f-config.cmake
libs/boost/lib/cmake/boost_math_tr1l-1.77.0/: boost_math_tr1l-config.cmake
libs/boost/lib/cmake/boost_prg_exec_monitor-1.77.0/: boost_prg_exec_monitor-config.cmake
libs/boost/lib/cmake/boost_regex-1.77.0/: boost_regex-config.cmake
libs/boost/lib/cmake/boost_serialization-1.77.0/: boost_serialization-config.cmake
libs/boost/lib/cmake/boost_stacktrace_backtrace-1.77.0/: boost_stacktrace_backtrace-config.cmake  libboost_stacktrace_backtrace-variant-static.cmake
libs/boost/lib/cmake/boost_stacktrace_noop-1.77.0/: boost_stacktrace_noop-config.cmake
libs/boost/lib/cmake/boost_stacktrace_windbg-1.77.0/: boost_stacktrace_windbg-config.cmake
libs/boost/lib/cmake/boost_timer-1.77.0/: boost_timer-config.cmake
libs/boost/not_used/: libboost_chrono.so.1.77.0  libboost_container.so.1.77.0  libboost_context.so.1.77.0  libboost_contract.so.1.77.0  libboost_coroutine.so.1.77.0  libboost_fiber.so.1.77.0  libboost_graph.so.1.77.0  libboost_iostreams.so.1.77.0  libboost_json.so.1.77.0  libboost_locale.so.1.77.0  libboost_log.so.1.77.0  libboost_log_setup.so.1.77.0  libboost_math_c99.so.1.77.0  libboost_math_c99f.so.1.77.0  libboost_math_c99l.so.1.77.0  libboost_math_tr1.so.1.77.0  libboost_math_tr1f.so.1.77.0  libboost_math_tr1l.so.1.77.0  libboost_nowide.so.1.77.0  libboost_prg_exec_monitor.so.1.77.0  libboost_random.so.1.77.0  libboost_serialization.so.1.77.0  libboost_stacktrace_addr2line.so.1.77.0  libboost_stacktrace_backtrace.so.1.77.0  libboost_stacktrace_basic.so.1.77.0  libboost_stacktrace_noop.so.1.77.0  libboost_timer.so.1.77.0  libboost_type_erasure.so.1.77.0  libboost_unit_test_framework.so.1.77.0  libboost_wave.so.1.77.0  libboost_wserialization.so.1.77.0
libs/boost/not_used/cmake/boost_atomic-1.77.0/: boost_atomic-config.cmake
libs/boost/not_used/cmake/boost_chrono-1.77.0/: boost_chrono-config.cmake
libs/boost/not_used/cmake/boost_contract-1.77.0/: boost_contract-config.cmake
libs/boost/not_used/cmake/boost_exception-1.77.0/: boost_exception-config.cmake
libs/boost/not_used/cmake/boost_fiber-1.77.0/: boost_fiber-config.cmake
libs/boost/not_used/cmake/boost_filesystem-1.77.0/: boost_filesystem-config.cmake
libs/boost/not_used/cmake/boost_graph_parallel-1.77.0/: boost_graph_parallel-config.cmake
libs/boost/not_used/cmake/boost_headers-1.77.0/: boost_headers-config.cmake
libs/boost/not_used/cmake/boost_iostreams-1.77.0/: boost_iostreams-config.cmake
libs/boost/not_used/cmake/boost_json-1.77.0/: boost_json-config.cmake
libs/boost/not_used/cmake/boost_locale-1.77.0/: boost_locale-config.cmake  libboost_locale-variant-shared.cmake  libboost_locale-variant-static.cmake
libs/boost/not_used/cmake/boost_log-1.77.0/: boost_log-config.cmake
libs/boost/not_used/cmake/boost_log_setup-1.77.0/: boost_log_setup-config.cmake
libs/boost/not_used/cmake/boost_math_c99-1.77.0/: boost_math_c99-config.cmake
libs/boost/not_used/cmake/boost_mpi-1.77.0/: boost_mpi-config.cmake
libs/boost/not_used/cmake/boost_nowide-1.77.0/: boost_nowide-config.cmake
libs/boost/not_used/cmake/boost_program_options-1.77.0/: boost_program_options-config.cmake
libs/boost/not_used/cmake/boost_python-1.77.0/: boost_python-config.cmake
sandbox/Timers/: CMakeLists.txt  main.cpp  object_pool.h  worker_test.h
sandbox/duration_benchmark/: duration_benchmark.cpp
sandbox/logp7test/: CMakeLists.txt_  logp7.cpp
sandbox/stuff/: code.cpp  exchangeBuffer.cpp
server/: CMakeLists.txt  chat_type_id.h  test_server.cpp
(+12 files in other folders)
